Updated Quagga git and changed version naming for debian package
- Removed quagga git rev from package name and replaced it with
  a (manually incremented) revision number. Allows better upgrades
- Updated changelog to put git rev information in there

Signed-off-by: Martin Winter <mwinter@netdef.org>

--- a/debian_template/changelog
+++ b/debian_template/changelog
@@ -1,6 +1,8 @@
 opnfv-quagga (%_VERSION_%-%_RELEASE_%) unstable; urgency=low
 
   * OPNFV Build of Quagga with Thrift Interface by %_USER_%
+  * Built based on Quagga Git Rev %_QUAGGAREV_% from
+    %_QUAGGAGIT_%
 
  -- %_USER_% %_EMAIL_%  %_DATE_%
 
