--- a/debian_template/changelog
+++ b/debian_template/changelog
@@ -3,6 +3,8 @@ opnfv-quagga (%_VERSION_%-%_RELEASE_%) unstable; urgency=low
   * OPNFV Build of Quagga with Thrift Interface by %_USER_%
   * Built based on Quagga Git Rev %_QUAGGAREV_% from
     %_QUAGGAGIT_%
+  * Added Thrift Interface Git Rev %_QTHRIFTREV_% from
+    %_QTHRIFTGIT_%
 
  -- %_USER_% %_EMAIL_%  %_DATE_%
 
